--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,100&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <nav>
+        <a href="#" id="logo">
+            <img src="assets/Logo.svg" alt="logomarca">
+        </a>
+
+        <ul>
+            <li>
+                <a href="#">
+                    <img src="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa">
+                </a>
+            </li>
+            <li><a href="#">Explorer</a></li>
+            <li><a href="">Minhas Viagens</a></li>
+            <li><a href="">
+                <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+            </a>
+        </li>
+        </ul>
+    </nav>
 </body>
 </html>
