--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="assets/Logo.svg" alt="logomarca">
             </a>
 
-            <ul>
+            <ul id="primary-menu">
                 <li>
                     <a href="#">
                         <img src ="assets/icons/MagnifyingGlass.svg" alt="ícone de lupa">
@@ -33,6 +33,34 @@
             </li>
             </ul>
         </nav>
+        <header>
+            <div class="container">
+                <div id="profile">
+                     <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                    <div>
+                        <h1>Isabela Torres</h1>
+                        <p>
+                            Amante de viagens, cultura e gastronomia. 🌍✈️  
+                            Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+                        </p>
+                    </div>
+                </div>
+                <ul id="info">
+                <li>
+                    <img src="assets/icons/MapPin.svg" alt="Ícone de Mapa">
+                    <span>São Paulo, Brazil</span>
+                </li>
+                <li>
+                    <img src="assets/icons/AirplaneTilt.svg" alt="Ícone de avião">
+                    <span>37 países</span>
+                </li>
+                <li>
+                    <img src="assets/icons/Image.svg" alt="Ícone de imagem">
+                    <span>240 fotos</span>
+                </li>
+                </ul>
+            </div>
+        </header>
     </div>
 </body>
 </html>
