--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             </div>
         </header>
     </div>
+
     <main class="container">
         <img src="assets/images/Image 01.png" alt="">
         <img src="assets/images/Image 02.png" alt="">
@@ -76,5 +77,19 @@
         <img src="assets/images/Image 11.png" alt="">
         <img src="assets/images/Image 12.png" alt="">
     </main>
+
+    <footer class="container">
+        <span>
+            Travelgram &copy; 2024
+        </span>
+
+        <span>
+            Termos de uso
+        </span>
+
+        <span>
+            Política de privacidade
+        </span>
+    </footer>
 </body>
 </html>
